force-app/main/default/objects/Trip__c/fields/Cost_of_flight__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_flight__c</fullName>
    <label>Cost of flight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>