force-app/main/default/objects/Trip__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <label>Departure</label>
    <type>Date</type>
</CustomField>