force-app/main/default/objects/Trip__c/fields/Dependency__c.field-meta.xml
<CustomField>
    <fullName>Dependency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dependency</label>
    <referenceTo>TripMaker__c</referenceTo>
    <relationshipLabel>Dependency</relationshipLabel>
    <relationshipName>TripMaker</relationshipName>
    <type>Lookup</type>
</CustomField>