force-app/main/default/objects/Trip__c/fields/Flight_URL__c.field-meta.xml
<CustomField>
    <fullName>Flight_URL__c</fullName>
    <inlineHelpText>Enter the source of the price tag</inlineHelpText>
    <label>Flight URL</label>
    <type>Url</type>
</CustomField>