force-app/main/default/objects/Trip__c/fields/Merge_With__c.field-meta.xml
<CustomField>
    <fullName>Merge_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge With</label>
    <referenceTo>Trip__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <type>Lookup</type>
</CustomField>