force-app/main/default/objects/Trip__c/fields/Secondary_Flight_Price__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Flight_Price__c</fullName>
    <label>Secondary Flight Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>