force-app/main/default/objects/Trip__c/fields/Total_Transport_and_Accommodation_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Transport_and_Accommodation_Costs__c</fullName>
    <label>Total Transport and Accommodation Costs</label>
    <summarizedField>Stopover__c.Total_Costs__c</summarizedField>
    <summaryForeignKey>Stopover__c.Trip__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>