force-app/main/default/objects/Trip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Costs__c</columns>
    <columns>Flight_URL__c</columns>
    <columns>Merge_With__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>