force-app/main/default/objects/Trip__c/listViews/No_Secondary_Price.listView-meta.xml
<ListView>
    <fullName>No_Secondary_Price</fullName>
    <columns>NAME</columns>
    <columns>Flight_URL__c</columns>
    <columns>Total_Costs__c</columns>
    <columns>Cost_of_flight__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Secondary_Flight_Price__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Merge_With__c</field>
        <operation>equals</operation>
    </filters>
    <label>No Secondary Price</label>
</ListView>